@@ -6,6 +6,6 @@ import com.example.heroes.shared.domain.DomainError;
 public final class HeroNotFoundException extends DomainError {
 
     public HeroNotFoundException(HeroId id) {
-        super("hero_not_found", String.format("Not found hero <%s>", id.value()));
+        super("hero_not_found", "Not found hero <%s>".formatted(id.value()));
     }
 }
