@@ -6,6 +6,6 @@ import com.example.heroes.villains.domain.VillainId;
 public final class VillainAlreadyExistsException extends DomainError {
 
     public VillainAlreadyExistsException(VillainId id) {
-        super("villain_already_exists", String.format("The villain <%s> already exists", id.value()));
+        super("villain_already_exists", "The villain <%s> already exists".formatted(id.value()));
     }
 }
