@@ -6,6 +6,6 @@ import com.example.heroes.villains.domain.VillainId;
 public final class VillainNotFoundException extends DomainError {
 
     public VillainNotFoundException(VillainId id) {
-        super("villain_not_found", String.format("Not found villain <%s>", id.value()));
+        super("villain_not_found", "Not found villain <%s>".formatted(id.value()));
     }
 }
